[MediaStream] MediaStream.addTrack should not check for tracks ended state. https://bugs.webkit.org/show_bug.cgi?id=133510

Patch by Kiran <kiran.guduru@samsung.com> on 2014-06-05
Reviewed by Eric Carlson.

Source/WebCore:
Adding and removing of tracks to a MediaStream should not have dependency
on tracks state. So the check for MediaStreamTrack's ended state has been
removed while adding a track in MediaStreamPrivate.cpp.

Test: fast/mediastream/MediaStream-add-ended-tracks.html

* platform/mediastream/MediaStreamPrivate.cpp:
(WebCore::MediaStreamPrivate::addTrack):

LayoutTests:
* fast/mediastream/MediaStream-add-ended-tracks-expected.txt: Added.
* fast/mediastream/MediaStream-add-ended-tracks.html: Added.

Canonical link: https://commits.webkit.org/151538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169611 268f45cc-cd09-0410-ab3c-d52691b4dbfc